fix broken css on some pages

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,7 @@ bolds {
 }
 
 #tat_popup {
-  -webkit-box-sizing: border-box;
-  width: 29em;
+  width: 30em;
 }
 
 #tat_result {
